@@ -17,13 +17,9 @@ MAVEN_THREADS=${MAVEN_THREADS:-2}
 SKIP_TESTS=${SKIP_TESTS:-false}
 SKIP_INTEGRATION_TESTS=${SKIP_INTEGRATION_TESTS:-${SKIP_TESTS}}
 BUILD_TARGET=${1:-${BUILD_TARGET:-package}}
-export MAVEN_ARGS=${MAVEN_ARGS:=--no-transfer-progress}
 
-JAVA_VERSION=$(java -version 2>&1 | awk -F[\".] '/version/ {print $2}')
-if [ "$JAVA_VERSION" -ge 23 ]; then
-  #WARNING: A terminally deprecated method in sun.misc.Unsafe has been called
-  MAVEN_OPTS="--enable-native-access=ALL-UNNAMED --sun-misc-unsafe-memory-access=allow"
-fi
+"${BASH_SOURCE%/*}/setup_maven.sh"
+
 
 
 OLD_X=${-//[^x]/}
